--- a/HTML CSS PROJECTS/1_Tribute_page.html
+++ b/HTML CSS PROJECTS/1_Tribute_page.html
@@ -8,58 +8,93 @@
   </head>
 
   <body>
-    <div>
-      <h1>Missile Man Of India</h1>
-      <p>
-        <strong>Avul Pakir Jainulabdeen Abdul Kalam </strong>(/'a:bdəl kə'la:m/
-        (About this soundlisten); 15 October 1931-27 July 2015) was an Indian
-        aerospace scientist who served as the 11th president of India from 2002
-        to 2007. He was born and raised in Rameswaram, Tamil Nadu and studied
-        physics and aerospace engineering. He spent the next four decades as a
-        scientist and science administrator, mainly at the Defence Research and
-        Development Organisation (DRDO) and Indian Space Research Organisation
-        (ISRO) and was intimately involved in India's civilian space programme
-        and military missile development efforts. [1] He thus came to be known
-        as the Missile Man of India for his work on the development of ballistic
-        missile and launch vehicle technology.[2][3][4] He also played a pivotal
-        organisational, technical, and political role in India's Pokhran-Il
-        nuclear tests in 1998, the first since the original nuclear test by
-        India in 1974.
+    <div class="container">
+      <section class="top-section">
+        <div class="image">
+          <img
+            style="align-self: flex-start"
+            src="/HTML CSS PROJECTS/IMAGES/APJ.png"
+            alt="APJ Abdul Kalam"
+            height="250px"
+          />
+        </div>
+
+        <div>
+          <h1 style="font-size: 40px">A. P. J. Abdul Kalam</h1>
+          <p style="text-align: end">1931-2015</p>
+        </div>
+      </section>
+
+      <br />
+      <br />
+
+      <div>
+        <h1 style="font-size: 80px">Missile Man Of India</h1>
+        <br />
+        <p>
+          <strong>Avul Pakir Jainulabdeen Abdul Kalam </strong>(/'a:bdəl
+          kə'la:m/ (About this soundlisten); 15 October 1931-27 July 2015) was
+          an Indian aerospace scientist who served as the 11th president of
+          India from 2002 to 2007. He was born and raised in Rameswaram, Tamil
+          Nadu and studied physics and aerospace engineering. He spent the next
+          four decades as a scientist and science administrator, mainly at the
+          Defence Research and Development Organisation (DRDO) and Indian Space
+          Research Organisation (ISRO) and was intimately involved in India's
+          civilian space programme and military missile development efforts. [1]
+          He thus came to be known as the Missile Man of India for his work on
+          the development of ballistic missile and launch vehicle
+          technology.[2][3][4] He also played a pivotal organisational,
+          technical, and political role in India's Pokhran-Il nuclear tests in
+          1998, the first since the original nuclear test by India in 1974.
+        </p>
+      </div>
+      <br />
+      <br />
+
+      <h3>Biographies</h3>
+      <br />
+      <ul style="margin-left: 30px">
+        <li>
+          Eternal Quest: Life and Times of Dr Kalam by S Chandra; Pentagon
+          Publishers, 2002
+        </li>
+        <li>
+          President APJ Abdul Kalam by R K Pruthi; Anmol Publications, 2002.
+        </li>
+        <li>
+          APJ Abdul Kalam: The Visionary of India by K Bhushan, G Katyal; A PH
+          Pub Corp, 2002.
+        </li>
+        <li>
+          A Little Dream (documentary film) by P. Dhanapal; Minveli Media Works
+          Private Limited, 2008.
+        </li>
+        <li>
+          The Kalam Effect: My Years with the President by P M Nair; Harper
+          Collins, 2008.
+        </li>
+        <li>
+          My Days With Mahatma Abdul Kalam by Fr A K George; Novel Corporation,
+          2009
+        </li>
+        <li>A.P.J. Abdul Kalam: A Life by Arun Tiwari; Haper Collins, 2015.</li>
+        <li>
+          The People's President: Dr A PJ Abdul Kalam by S M Khan; Bloomsbury
+          Publishing, 2016.
+        </li>
+      </ul>
+
+      <br />
+      <br />
+
+      <p style="text-align: end">
+        Read more about A.P.J. Abdul Kalam on
+        <a
+          href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"
+          style="text-decoration: none"
+          >wikipedia</a
+        >
       </p>
     </div>
-
-    <h4>Biographies</h4>
-    <ul>
-      <li>
-        Eternal Quest: Life and Times of Dr Kalam by S Chandra; Pentagon
-        Publishers, 2002
-      </li>
-      <li>
-        President APJ Abdul Kalam by R K Pruthi; Anmol Publications, 2002.
-      </li>
-      <li>
-        APJ Abdul Kalam: The Visionary of India by K Bhushan, G Katyal; A PH Pub
-        Corp, 2002.
-      </li>
-      <li>
-        A Little Dream (documentary film) by P. Dhanapal; Minveli Media Works
-        Private Limited, 2008.
-      </li>
-      <li>
-        The Kalam Effect: My Years with the President by P M Nair; Harper
-        Collins, 2008.
-      </li>
-      <li>
-        My Days With Mahatma Abdul Kalam by Fr A K George; Novel Corporation,
-        2009
-      </li>
-      <li>A.P.J. Abdul Kalam: A Life by Arun Tiwari; Haper Collins, 2015.</li>
-      <li>
-        The People's President: Dr A PJ Abdul Kalam by S M Khan; Bloomsbury
-        Publishing, 2016.
-      </li>
-    </ul>
-
-    <p>Read more about A.P.J. Abdul Kalam on <a></a></p>
   </body>
 </html>
